[package]
name = "api-pass"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
rpassword = "7.3"
keyring = "2.3"
csv = "1.3"
anyhow = "1.0"
dirs = "5.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
libc = "0.2"
whoami = "1.4"

# Touch ID authentication is handled via Swift script compilation
# No additional macOS-specific dependencies needed
